k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: employees-api
  template: 
    metadata: 
      labels:
        app: employees-api
    spec:
      containers:
        - image: vetrip/employees-api:2.0.0
          name: employees-api
          ports:
            - containerPort: 8080
