k8s/api-dployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: employees-api
    template: 
      metadata: 
        labels:
          app: employees-api
      spec:
        containers:
          - image: vetrip/employees-api
            name: employees-api
            ports:
              - containerPort: 3200
