k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels: 
        app: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name:  mysql-persistent-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: mysql-pv-claim
