k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: employees-ui
  template: 
    metadata: 
      labels:
        app: employees-ui
    spec:
      containers:
        - image: vetrip/employees-ui:2.0.0
          name: employees-ui
          ports:
            - containerPort: 3100
