k8s/ui-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: employees-ui
  ports:
    - port: 3100
      targetPort: 3100
