k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "34.68.103.18.nix.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              serviceName: ui-cluster-ip-service
              servicePort: 3100
          - pathType: Prefix
            path: /api
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 8080
